# QtJieba

./: .gitignore  CMakeLists.txt  QtJieba_global.h  Tokenizer.cpp  Tokenizer.h  main.cpp
include/cppjieba/: HMMSegment.hpp
